HMAN-985: Include HMI endpoint health in outbound adaptor health (#268)
* HMAN-985: Include HMI endpoint health in outbound adaptor health

Added HearingManagementInterfaceHealthIndicator.  This adds a check of the Hearing Management Interface private health endpoint to the outbound adapater health output.

The outbound adapter health will be shown as down if the Hearing Management Interface private endpoint returns an error, or an error is encountered when attempting to connect to it.  The outbound adapter health will also be shown as down if the call to Active Directory to get an access token returns an error, or an error is encountered when attempting to connect to it.

A retryer has been added to retry the connection to Active Directory.  This is configurable via environment variables.

Cleaned up some tests and changed logging to use placeholders instead of string concatenation.

* HMAN-985: Include HMI endpoint health in outbound adaptor health

FutureHearingErrorDecoder:
- Changed getResponseBody() method to return a "blank" object if response body is null.  This prevents an unhandled nil object error if response body is null.
- Changed decode() method to output "n/a" for response body in debug output if response body is null.

FutureHearingErrorDecoderTest:
- Changed class to use Mockito via ExtendWith annotation.
- Created method for checking log entry and updated tests to use it.
- Added tests for null/not null request and response payloads.

* HMAN-985: Improve test coverage

Added some more test cases to FutureHearingRepositoryTest to improve coverage of DefaultFutureHearingRepository.getAuthErrorCode() method.

* HMAN-985: Preview environment configuration

Updated Jenkinsfile_CNP to load Active Directory secrets from key vault and to use AAT key vault for preview environment.

* HMAN-985: Preview environment configuration

Try adding fh-get-token-url entry to hmc key vault in values.preview.template.yaml

* HMAN-985: Preview environment configuration

